# streamServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
include/headers/: authentificator.h  blowfish_crypt.h  client.h  client_manager.h  connector.h  cryptor.h  db_connector.h  receiver.h  sender.h  serializer.h  server.h  starter.h  stream_client.h  thread_pool.h  ui_controller.h  utils.h
include/ui/: mainClientWindow.qml  mainServerWindow.qml  startWindow.qml
sources/: authentificator.cpp  blowfish_crypt.cpp  client.cpp  client_manager.cpp  connector.cpp  cryptor.cpp  db_connector.cpp  receiver.cpp  sender.cpp  serializer.cpp  server.cpp  starter.cpp  stream_client.cpp  thread_pool.cpp  ui_controller.cpp  utils.cpp
